--- a/Views/simple/views/RemoveOutOfStock.html
+++ b/Views/simple/views/RemoveOutOfStock.html
@@ -32,7 +32,7 @@
           </div>
 
 
-          <div ng-if="i.CompositeSubItems.length > 0">
+          <td ng-if="i.CompositeSubItems.length > 0">
 
               <table lw-tst="grid2" class="lw-table lw-table-fixed order-items" style="table-layout: auto !important">
                 <thead>
@@ -78,7 +78,7 @@
             <td>{{ i.OnOrder }}</td>
             <td></td>
 
-          </div>
+          </td>
 
         </tr>
       </tbody>
