--- a/Views/simple/views/RemoveOutOfStock.html
+++ b/Views/simple/views/RemoveOutOfStock.html
@@ -13,7 +13,10 @@
           <th >Due</th>
         </tr>
       </thead>
-      <tbody ng-repeat="i in itemsToRemove track by $index">
+    </table>
+
+    <table lw-tst="grid2" class="lw-table lw-table-fixed order-items" style="table-layout: auto !important" ng-repeat="i in itemsToRemove track by $index">
+      <tbody >
         <tr >
           <td>{{ i.SKU }}</td>
           <td>{{ i.Title }}</td>
