--- a/Views/simple/views/RemoveOutOfStock.html
+++ b/Views/simple/views/RemoveOutOfStock.html
@@ -30,7 +30,7 @@
           </tr>
         </thead>
         <tbody >
-          <div ng-if="i.CompositeSubItems?.length > 0" >
+          <div ng-if="isExists(i.CompositeSubItems)" >
             <tr style="font-weight:bold">
               <td>{{ i.SKU }}</td>
               <td>{{ i.Title }}</td>
@@ -60,7 +60,7 @@
             </tr>
           </div>
 
-          <div ng-if="i.CompositeSubItems?.length == 0" >
+          <div ng-if="!isExists(i.CompositeSubItems)" >
             <tr>
               <td>{{ i.SKU }}</td>
               <td>{{ i.Title }}</td>
