--- a/Views/simple/views/RemoveOutOfStock.html
+++ b/Views/simple/views/RemoveOutOfStock.html
@@ -60,7 +60,7 @@
             </tr>
           </div>
 
-          <div ng-if="i.CompositeSubItems.length === 0" >
+          <div ng-if="i.CompositeSubItems.length == 0" >
             <tr>
               <td>{{ i.SKU }}</td>
               <td>{{ i.Title }}</td>
