--- a/Views/simple/views/RemoveOutOfStock.html
+++ b/Views/simple/views/RemoveOutOfStock.html
@@ -29,10 +29,9 @@
             <th style="min-width: 80px">Due</th>
           </tr>
         </thead>
-        <tbody >
+        <tbody ng-if="!i.CompositeSubItems[0]">
 
-          <div ng-if="!i.CompositeSubItems[0]" >
-            <tr>
+            <tr >
               <td>{{ i.SKU }}</td>
               <td>{{ i.Title }}</td>
               <td>{{ i.Quantity }}</td>
@@ -44,11 +43,10 @@
               </td>
               <td>{{ i.OnOrder }}</td>
               <td></td>
-            </tr>
-    
-          </div>
+            </tr></tbody>
 
-          <div ng-if="i.CompositeSubItems[0] && i.CompositeSubItems.length > 0" >
+    
+        <tbody ng-if="i.CompositeSubItems[0] && i.CompositeSubItems.length > 0">
             <tr style="font-weight:bold">
               <td>{{ i.SKU }}</td>
               <td>{{ i.Title }}</td>
@@ -76,10 +74,7 @@
               <td>{{ si.OnOrder }}</td>
               <td></td>
             </tr>
-          </div>
 
-          
-          
         </tbody>
   
       </table>
