--- a/Kabir/Views/simple/views/CustomImages.html
+++ b/Kabir/Views/simple/views/CustomImages.html
@@ -2,8 +2,6 @@
 
   <p> Hi </p>
 
-    <div>
-        <h1> adsf </h1>
-    </div>
+  <iframe src="https://application.doodle-products.com/"></iframe>
 
 </div>
