--- a/Kabir/Views/simple/views/CustomImages.html
+++ b/Kabir/Views/simple/views/CustomImages.html
@@ -2,6 +2,6 @@
 
   <p> Hi </p>
 
-  <iframe src="https://application.doodle-products.com/"></iframe>
+  <iframe style="width: 100%; height: 100%" src="https://application.doodle-products.com/"></iframe>
 
 </div>
