--- a/Kabir/Views/simple/views/CustomImages.html
+++ b/Kabir/Views/simple/views/CustomImages.html
@@ -1,7 +1,11 @@
 <div ng-controller="CustomImagesView">
+    <div class="ci-container">
 
-  <p> Hi </p>
+        <iframe class="responsive-iframe" src="https://application.doodle-products.com/"></iframe>
 
-  <iframe style="width: 100%; height: 100%" src="https://application.doodle-products.com/"></iframe>
+    </div>
+
+
+  
 
 </div>
