--- a/Kabir/Views/simple/views/CustomImages.html
+++ b/Kabir/Views/simple/views/CustomImages.html
@@ -1,7 +1,7 @@
 <div ng-controller="CustomImagesView">
     <div class="ci-container">
 
-        <iframe class="responsive-iframe" src="https://application.doodle-products.com/"></iframe>
+        <iframe class="responsive-iframe" src="https://application.doodle-products.com/?itemGuid=1234"></iframe>
 
     </div>
 
