--- a/Kabir/Views/simple/views/CustomImages.html
+++ b/Kabir/Views/simple/views/CustomImages.html
@@ -1,5 +1,6 @@
 <div ng-controller="CustomImagesView">
     <div class="ci-container">
+        <p> {{sc.itemId}} </p>
 
         <iframe class="responsive-iframe" src="https://application.doodle-products.com/?itemGuid=1234"></iframe>
 
