--- a/Kabir/Views/simple/views/SpecSheet.html
+++ b/Kabir/Views/simple/views/SpecSheet.html
@@ -1,4 +1,4 @@
-<div ng-controller="CustomImagesView">
+<div ng-controller="SpecSheetView">
     <div class="ci-container">
         <p> {{sc.itemId}} </p>
 
