--- a/Kabir/Views/simple/views/SpecSheet.html
+++ b/Kabir/Views/simple/views/SpecSheet.html
@@ -1,8 +1,9 @@
 <div ng-controller="SpecSheetView">
     <div class="ci-container">
+        <p> Stock Item Id </p>
         <p> {{sc.itemId}} </p>
 
-        <iframe class="responsive-iframe" src="https://application.doodle-products.com/?itemGuid=1234"></iframe>
+        <!-- <iframe class="responsive-iframe" src="https://application.doodle-products.com/?itemGuid=1234"></iframe> -->
 
     </div>
 
