--- a/Kabir/Views/simple/views/SpecSheet.html
+++ b/Kabir/Views/simple/views/SpecSheet.html
@@ -1,9 +1,20 @@
 <div ng-controller="SpecSheetView">
     <div class="ci-container">
         <p> Stock Item Id </p>
-        <p> {{sc.itemId}} </p>
+        <p> {{itemId}} </p>
 
         <!-- <iframe class="responsive-iframe" src="https://application.doodle-products.com/?itemGuid=1234"></iframe> -->
+
+        <!-- Product Details -->
+        <input type="text" placeholder="Details...">
+
+        <!-- ArtWork -->
+
+        <!-- Packaging Details -->
+
+        <!-- Inner Carton -->
+
+        <!-- General Comments -->
 
     </div>
 
