--- a/Kabir/Views/simple/views/SpecSheet.html
+++ b/Kabir/Views/simple/views/SpecSheet.html
@@ -6,19 +6,28 @@
         <!-- <iframe class="responsive-iframe" src="https://application.doodle-products.com/?itemGuid=1234"></iframe> -->
 
         <!-- Product Details -->
-        <input type="text" placeholder="Details...">
+        <input class="ext-prop" type="text" name="prodDetails" ng-model="prodDetails" />
 
         <!-- ArtWork -->
+        <input class="ext-prop" type="text" name="artwork" ng-model="artwork" />
 
         <!-- Packaging Details -->
+        <input class="ext-prop" type="text" name="packaging" ng-model="prodDetails" />
 
         <!-- Inner Carton -->
+        <input class="ext-prop" type="text" name="innerCarton" ng-model="innerCarton" />
 
         <!-- General Comments -->
+        <input class="ext-prop" type="text" name="generalComments" ng-model="generalComments" />
+
+        <br>
+        <div class="pull-right">
+            <button class="btn btn-primary" ng-click="generateSpecSheet()">Generate Spec Sheet</button>
+        </div>
 
     </div>
 
 
-  
+
 
 </div>
