--- a/Kabir/Views/simple/views/SpecSheet.html
+++ b/Kabir/Views/simple/views/SpecSheet.html
@@ -1,23 +1,28 @@
 <div ng-controller="SpecSheetView">
     <div class="ci-container">
         <p> Stock Item Id </p>
-        <p> {{itemId}} </p>
+        <p> {{stockItemId}} </p>
 
         <!-- <iframe class="responsive-iframe" src="https://application.doodle-products.com/?itemGuid=1234"></iframe> -->
 
         <!-- Product Details -->
+        <p> Product Details</p>
         <input class="ext-prop" type="text" name="prodDetails" ng-model="prodDetails" />
 
         <!-- ArtWork -->
+        <p> Artwork </p>
         <input class="ext-prop" type="text" name="artwork" ng-model="artwork" />
 
         <!-- Packaging Details -->
+        <p> Packaging Details </p>
         <input class="ext-prop" type="text" name="packaging" ng-model="prodDetails" />
 
         <!-- Inner Carton -->
+        <p> Inner Carton </p>
         <input class="ext-prop" type="text" name="innerCarton" ng-model="innerCarton" />
 
         <!-- General Comments -->
+        <p> General Comments </p>
         <input class="ext-prop" type="text" name="generalComments" ng-model="generalComments" />
 
         <br>
