--- a/Kabir/Views/simple/views/SpecSheet.html
+++ b/Kabir/Views/simple/views/SpecSheet.html
@@ -1,6 +1,6 @@
 <div ng-controller="SpecSheetView">
     <div class="ci-container">
-        <p> Stock Item Id </p>
+        <p> Stock Item Id 1 </p>
         <p> {{stockItemId}} </p>
 
         <!-- <iframe class="responsive-iframe" src="https://application.doodle-products.com/?itemGuid=1234"></iframe> -->
