--- a/Kabir/Views/simple/views/SpecSheet.html
+++ b/Kabir/Views/simple/views/SpecSheet.html
@@ -26,9 +26,10 @@
         <input class="ext-prop" type="text" name="generalComments" ng-model="generalComments" />
 
         <br>
-        <div class="pull-right">
+        <!-- <div class="pull-right"> -->
+            <button class="btn btn-primary" ng-click="saveProps()">Save Properties</button>
             <button class="btn btn-primary" ng-click="generateSpecSheet()">Generate Spec Sheet</button>
-        </div>
+        <!-- </div> -->
 
     </div>
 
