--- a/Kabir/Views/simple/views/SpecSheet.html
+++ b/Kabir/Views/simple/views/SpecSheet.html
@@ -1,33 +1,32 @@
 <div ng-controller="SpecSheetView">
     <div class="ci-container">
-        <p> Stock Item Id 1 </p>
         <p> {{stockItemId}} </p>
 
         <!-- <iframe class="responsive-iframe" src="https://application.doodle-products.com/?itemGuid=1234"></iframe> -->
 
         <!-- Product Details -->
-        <p> Product Details</p>
-        <input class="ext-prop" type="text" name="prodDetails" ng-model="prodDetails" />
+        <p> Product Details: </p>
+        <input class="ext-prop" type="text" name="productDetails" ng-model="prodDetails.PropertyValue" />
 
         <!-- ArtWork -->
         <p> Artwork </p>
-        <input class="ext-prop" type="text" name="artwork" ng-model="artwork" />
+        <input class="ext-prop" type="text" name="artwork" ng-model="artwork.PropertyValue" />
 
         <!-- Packaging Details -->
-        <p> Packaging Details </p>
-        <input class="ext-prop" type="text" name="packaging" ng-model="prodDetails" />
+        <p> Packaging Details: </p>
+        <input class="ext-prop" type="text" name="packagingDetails" ng-model="prodDetails.PropertyValue" />
 
         <!-- Inner Carton -->
-        <p> Inner Carton </p>
-        <input class="ext-prop" type="text" name="innerCarton" ng-model="innerCarton" />
+        <p> Inner Carton: </p>
+        <input class="ext-prop" type="text" name="innerCarton" ng-model="innerCarton.PropertyValue" />
 
         <!-- General Comments -->
-        <p> General Comments </p>
-        <input class="ext-prop" type="text" name="generalComments" ng-model="generalComments" />
+        <p> General Comments: </p>
+        <input class="ext-prop" type="text" name="generalComments" ng-model="generalComments.PropertyValue" />
 
         <br>
         <!-- <div class="pull-right"> -->
-            <button class="btn btn-primary" ng-click="saveProps()">Save Properties</button>
+            <button class="btn btn-primary" ng-click="saveProperties()">Save Properties</button>
             <button class="btn btn-primary" ng-click="generateSpecSheet()">Generate Spec Sheet</button>
         <!-- </div> -->
 
