--- a/Kabir/Views/simple/views/SpecSheet.html
+++ b/Kabir/Views/simple/views/SpecSheet.html
@@ -5,24 +5,36 @@
         <!-- <iframe class="responsive-iframe" src="https://application.doodle-products.com/?itemGuid=1234"></iframe> -->
 
         <!-- Product Details -->
-        <p> Product Details: </p>
-        <input class="ext-prop" type="text" name="productDetails" ng-model="prodDetails.PropertyValue" />
+        <label for="productDetails">Product Details:</label>
+        <textarea id="productDetails" name="productDetails" rows="6" cols="100" ng-model="productDetails.PropertyValue"></textarea>
+
+
+        <!-- <p> Product Details: </p>
+        <input class="ext-prop" type="text" name="productDetails" ng-model="productDetails.PropertyValue" /> -->
 
         <!-- ArtWork -->
-        <p> Artwork </p>
-        <input class="ext-prop" type="text" name="artwork" ng-model="artwork.PropertyValue" />
+        <label for="artwork">Artwork:</label>
+        <textarea id="artwork" name="artwork" rows="6" cols="100" ng-model="artwork.PropertyValue"></textarea>
+        <!-- <p> Artwork </p>
+        <input class="ext-prop" type="text" name="artwork" ng-model="artwork.PropertyValue" /> -->
 
         <!-- Packaging Details -->
-        <p> Packaging Details: </p>
-        <input class="ext-prop" type="text" name="packagingDetails" ng-model="prodDetails.PropertyValue" />
+        <label for="packagingDetails">Packaging Details:</label>
+        <textarea id="packagingDetails" name="packagingDetails" rows="6" cols="100" ng-model="packagingDetails.PropertyValue"></textarea>
+        <!-- <p> Packaging Details: </p>
+        <input class="ext-prop" type="text" name="packagingDetails" ng-model="packagingDetails.PropertyValue" /> -->
 
         <!-- Inner Carton -->
-        <p> Inner Carton: </p>
-        <input class="ext-prop" type="text" name="innerCarton" ng-model="innerCarton.PropertyValue" />
+        <label for="innerCarton">Inner Carton:</label>
+        <textarea id="innerCarton" name="innerCarton" rows="6" cols="100" ng-model="innerCarton.PropertyValue"></textarea>
+        <!-- <p> Inner Carton: </p>
+        <input class="ext-prop" type="text" name="innerCarton" ng-model="innerCarton.PropertyValue" /> -->
 
         <!-- General Comments -->
-        <p> General Comments: </p>
-        <input class="ext-prop" type="text" name="generalComments" ng-model="generalComments.PropertyValue" />
+        <label for="generalComments">General Comments:</label>
+        <textarea id="generalComments" name="generalComments" rows="6" cols="100" ng-model="generalComments.PropertyValue"></textarea>
+        <!-- <p> General Comments: </p>
+        <input class="ext-prop" type="text" name="generalComments" ng-model="generalComments.PropertyValue" /> -->
 
         <br>
         <!-- <div class="pull-right"> -->
