--- a/Kabir/Views/simple/views/SpecSheet.html
+++ b/Kabir/Views/simple/views/SpecSheet.html
@@ -6,7 +6,7 @@
 
         <!-- Product Details -->
         <label for="productDetails">Product Details:</label>
-        <textarea id="productDetails" name="productDetails" rows="6" cols="100" ng-model="productDetails.PropertyValue"></textarea>
+        <textarea class="ext-prop" id="productDetails" name="productDetails" rows="6" cols="100" ng-model="productDetails.PropertyValue"></textarea>
 
 
         <!-- <p> Product Details: </p>
@@ -14,25 +14,25 @@
 
         <!-- ArtWork -->
         <label for="artwork">Artwork:</label>
-        <textarea id="artwork" name="artwork" rows="6" cols="100" ng-model="artwork.PropertyValue"></textarea>
+        <textarea class="ext-prop" id="artwork" name="artwork" rows="6" cols="100" ng-model="artwork.PropertyValue"></textarea>
         <!-- <p> Artwork </p>
         <input class="ext-prop" type="text" name="artwork" ng-model="artwork.PropertyValue" /> -->
 
         <!-- Packaging Details -->
         <label for="packagingDetails">Packaging Details:</label>
-        <textarea id="packagingDetails" name="packagingDetails" rows="6" cols="100" ng-model="packagingDetails.PropertyValue"></textarea>
+        <textarea class="ext-prop" id="packagingDetails" name="packagingDetails" rows="6" cols="100" ng-model="packagingDetails.PropertyValue"></textarea>
         <!-- <p> Packaging Details: </p>
         <input class="ext-prop" type="text" name="packagingDetails" ng-model="packagingDetails.PropertyValue" /> -->
 
         <!-- Inner Carton -->
         <label for="innerCarton">Inner Carton:</label>
-        <textarea id="innerCarton" name="innerCarton" rows="6" cols="100" ng-model="innerCarton.PropertyValue"></textarea>
+        <textarea class="ext-prop" id="innerCarton" name="innerCarton" rows="6" cols="100" ng-model="innerCarton.PropertyValue"></textarea>
         <!-- <p> Inner Carton: </p>
         <input class="ext-prop" type="text" name="innerCarton" ng-model="innerCarton.PropertyValue" /> -->
 
         <!-- General Comments -->
         <label for="generalComments">General Comments:</label>
-        <textarea id="generalComments" name="generalComments" rows="6" cols="100" ng-model="generalComments.PropertyValue"></textarea>
+        <textarea class="ext-prop" id="generalComments" name="generalComments" rows="6" cols="100" ng-model="generalComments.PropertyValue"></textarea>
         <!-- <p> General Comments: </p>
         <input class="ext-prop" type="text" name="generalComments" ng-model="generalComments.PropertyValue" /> -->
 
