--- a/Kabir/Views/simple/views/SpecSheet.html
+++ b/Kabir/Views/simple/views/SpecSheet.html
@@ -1,6 +1,9 @@
 <div ng-controller="SpecSheetView">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.70/pdfmake.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.70/vfs_fonts.js"></script>
+    <head>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.70/pdfmake.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.70/vfs_fonts.js"></script>
+    </head>
+    
 
     <div class="ci-container">
         <p> {{stockItemId}} </p>
