--- a/Kabir/Views/simple/views/SpecSheet.html
+++ b/Kabir/Views/simple/views/SpecSheet.html
@@ -4,7 +4,7 @@
     <div class="ci-container">
         <p> {{itemGuid}} </p>
 
-        <iframe class="responsive-iframe" src="https://application.doodle-products.com/?itemGuid={{stockItemId}}"></iframe>
+        <iframe class="responsive-iframe" src="https://application.doodle-products.com/?itemGuid='stockItemId'"></iframe>
 
         <!-- <label for="productDetails">Product Details:</label>
         <textarea class="ext-prop" id="productDetails" name="productDetails" rows="4" cols="100"
