--- a/Kabir/Views/simple/views/SpecSheet.html
+++ b/Kabir/Views/simple/views/SpecSheet.html
@@ -6,7 +6,7 @@
 
         <iframe id="plkrFrame" class="responsive-iframe"></iframe>
 
-        <!-- <label for="productDetails">Product Details:</label>
+        <!-- <label for="productDetails">   </label>
         <textarea class="ext-prop" id="productDetails" name="productDetails" rows="4" cols="100"
             ng-model="productDetails.PropertyValue" maxlength="2000"></textarea>
 
